@@ -480,6 +480,13 @@
 #
 ##########################################################################################################
 #
+## IPMI_System_Firmware_Progress_Device_Present
+#
+# IPMI_System_Firmware_Progress_Device_Present_Device_Removed_Device_Absent   Critical Critical
+# IPMI_System_Firmware_Progress_Device_Present_Device_Inserted_Device_Present Nominal  Nominal
+#
+##########################################################################################################
+#
 ## IPMI_System_Firmware_Progress_Transition_Severity
 #
 # IPMI_System_Firmware_Progress_Transition_Severity_Transition_To_OK                                 Nominal
