@@ -536,6 +536,14 @@ static struct ipmi_interpret_sensor_config ipmi_interpret_sensor_system_firmware
   };
 static unsigned int ipmi_interpret_sensor_system_firmware_progress_config_len = 4;
 
+static struct ipmi_interpret_sensor_config ipmi_interpret_sensor_system_firmware_progress_device_present_config[] =
+  {
+    { "IPMI_System_Firmware_Progress_Device_Present_Device_No_Event", IPMI_INTERPRET_STATE_NOMINAL},
+    { "IPMI_System_Firmware_Progress_Device_Present_Device_Removed_Device_Absent", IPMI_INTERPRET_STATE_CRITICAL},
+    { "IPMI_System_Firmware_Progress_Device_Present_Device_Inserted_Device_Present", IPMI_INTERPRET_STATE_NOMINAL},
+  };
+static unsigned int ipmi_interpret_sensor_system_firmware_progress_device_present_config_len = 3;
+
 static struct ipmi_interpret_sensor_config ipmi_interpret_sensor_system_firmware_progress_transition_severity_config[] =
   {
     { "IPMI_System_Firmware_Progress_Transition_Severity_No_Event", IPMI_INTERPRET_STATE_NOMINAL},
@@ -1822,6 +1830,12 @@ interpret_sensor_init (ipmi_interpret_ctx_t ctx)
     goto cleanup;
 
   if (_interpret_config_sensor_init (ctx,
+                                     &ctx->interpret_sensor.ipmi_interpret_sensor_system_firmware_progress_device_present_config,
+                                     ipmi_interpret_sensor_system_firmware_progress_device_present_config,
+                                     ipmi_interpret_sensor_system_firmware_progress_device_present_config_len) < 0)
+    goto cleanup;
+
+  if (_interpret_config_sensor_init (ctx,
                                      &ctx->interpret_sensor.ipmi_interpret_sensor_system_firmware_progress_transition_severity_config,
                                      ipmi_interpret_sensor_system_firmware_progress_transition_severity_config,
                                      ipmi_interpret_sensor_system_firmware_progress_transition_severity_config_len) < 0)
@@ -2172,6 +2186,9 @@ interpret_sensor_destroy (ipmi_interpret_ctx_t ctx)
 
   _interpret_config_sensor_destroy (ctx,
                                     ctx->interpret_sensor.ipmi_interpret_sensor_system_firmware_progress_config);
+
+  _interpret_config_sensor_destroy (ctx,
+                                    ctx->interpret_sensor.ipmi_interpret_sensor_system_firmware_progress_device_present_config);
 
   _interpret_config_sensor_destroy (ctx,
                                     ctx->interpret_sensor.ipmi_interpret_sensor_system_firmware_progress_transition_severity_config);
@@ -2545,6 +2562,7 @@ interpret_sensor_config_parse (ipmi_interpret_ctx_t ctx,
   int ipmi_interpret_sensor_drive_slot_device_present_flags[ipmi_interpret_sensor_drive_slot_device_present_config_len];
   int ipmi_interpret_sensor_post_memory_resize_state_flags[ipmi_interpret_sensor_post_memory_resize_state_config_len];
   int ipmi_interpret_sensor_system_firmware_progress_flags[ipmi_interpret_sensor_system_firmware_progress_config_len];
+  int ipmi_interpret_sensor_system_firmware_progress_device_present_flags[ipmi_interpret_sensor_system_firmware_progress_device_present_config_len];
   int ipmi_interpret_sensor_system_firmware_progress_transition_severity_flags[ipmi_interpret_sensor_system_firmware_progress_transition_severity_config_len];
   int ipmi_interpret_sensor_event_logging_disabled_flags[ipmi_interpret_sensor_event_logging_disabled_config_len];
   int ipmi_interpret_sensor_system_event_flags[ipmi_interpret_sensor_system_event_config_len];
@@ -2826,6 +2844,12 @@ interpret_sensor_config_parse (ipmi_interpret_ctx_t ctx,
                                ctx->interpret_sensor.ipmi_interpret_sensor_system_firmware_progress_config,
                                ipmi_interpret_sensor_system_firmware_progress_flags,
                                ipmi_interpret_sensor_system_firmware_progress_config_len);
+
+  _fill_sensor_config_options (config_file_options,
+                               &config_file_options_len,
+                               ctx->interpret_sensor.ipmi_interpret_sensor_system_firmware_progress_device_present_config,
+                               ipmi_interpret_sensor_system_firmware_progress_device_present_flags,
+                               ipmi_interpret_sensor_system_firmware_progress_device_present_config_len);
 
   _fill_sensor_config_options (config_file_options,
                                &config_file_options_len,
